# solsp

./: .gitignore  Cargo.toml  README.md
.github/workflows/: vscode-vsix.yml
crates/base-db/: Cargo.toml
crates/base-db/src/: lib.rs
crates/hir/: Cargo.toml
crates/hir/src/: imports.rs  lib.rs  resolve.rs
crates/ide/: Cargo.toml
crates/ide/src/: diagnostics.rs  document_symbols.rs  lib.rs  line_index.rs  navigation.rs  semantic_tokens.rs
crates/server/: Cargo.toml
crates/server/src/: abi.rs  builtins.rs  call_resolution.rs  capabilities.rs  code_actions.rs  completion_items.rs  contract_diagnostics.rs  diagnostics.rs  flow_diagnostics.rs  graphs.rs  import_diagnostics.rs  import_resolution.rs  import_surface.rs  inheritance.rs  interaction.rs  lib.rs  lsp_loop.rs  main.rs  member_resolution.rs  mutability.rs  name_diagnostics.rs  named_args.rs  navigation.rs  perf.rs  protocol.rs  references.rs  state.rs  syntax_utils.rs  to_proto.rs  type_diagnostics.rs  type_inference.rs  typecheck.rs  usage_diagnostics.rs  using_for.rs
crates/server/tests/: perf.rs  session.rs
crates/syntax/: Cargo.toml
crates/syntax/src/: ast.rs  event.rs  grammar.rs  input.rs  lexer.rs  lib.rs  parser.rs  syntax_kind.rs
editors/vscode/: .npmignore  .vscodeignore  CHANGELOG.md  LICENSE  README.md  language-configuration.json  package-lock.json  package.json  tsconfig.json
editors/vscode/scripts/: package-platform.mjs
editors/vscode/server/: solsp-server
editors/vscode/src/: extension.ts
editors/vscode/syntaxes/: solidity.tmLanguage.json
editors/zed/: Cargo.toml  extension.toml
editors/zed/languages/solidity/: config.toml
editors/zed/src/: lib.rs
