# solsp — LSP server for Solidity (rust-analyzer style).
# Layering (see docs/.../design.md §2):
#   solsp-syntax  -> lexer/parser/CST/AST (pure: no LSP, no salsa)
#   solsp-ide     -> features over syntax, returns "bare" data
#   solsp-server  -> LSP protocol over stdio (the binary)
# The editor client lives in editors/vscode (TypeScript, not a cargo crate).
[workspace]
resolver = "2"
members = ["crates/syntax", "crates/ide", "crates/base-db", "crates/server"]

[workspace.package]
version = "0.0.1"
edition = "2021"
license = "MIT OR Apache-2.0"
