[package]
name = "solsp-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "solsp-server"
path = "src/main.rs"

[dependencies]
solsp-syntax = { path = "../syntax" }
solsp-ide = { path = "../ide" }
rowan = "0.15"
lsp-server = "0.7"
lsp-types = "0.95"
serde_json = "1"
anyhow = "1"
dashmap = "5"

[dev-dependencies]
serde = "1"
